--- a/site/index.html
+++ b/site/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- Load the Paper.js library -->
-<script type="text/javascript" src="js/paper-full.js"></script>
-<!-- Define inlined PaperScript associate it with myCanvas -->
-<script type="text/paperscript" canvas="mainCanvas" src="js/app.js">
-</script>
+    <script type="text/javascript" src="js/paper-full.js"></script>
 </head>
+    <style type="text/css">
+    html,
+    body {
+        margin: 0;
+        overflow: hidden;
+        height: 100%;
+    }
+
+    /* Scale canvas with resize attribute to full size */
+    canvas[resize] {
+        width: 100%;
+        height: 100%;
+    }
+</style>
 <body>
 	<canvas id="mainCanvas" resize></canvas>
+    <script type="text/paperscript" canvas="mainCanvas" src="js/app.js"></script>
 </body>
 </html>
