--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,7 @@
     }
 </style>
 <body>
+    <button onclick="window.textTrace()">Text trace</button>
 	<canvas id="mainCanvas" resize></canvas>
     <script type="text/paperscript" canvas="mainCanvas" src="js/app.js"></script>
 </body>
