Baseline text layout working.

--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <script type="text/javascript" src="js/paper-full.js"></script>
+    <script type="text/javascript" src="http://nodebox.github.io/opentype.js/dist/opentype.js"></script>
+    
 </head>
     <style type="text/css">
     html,
