Draggable bounds working

--- a/site/index.html
+++ b/site/index.html
@@ -17,6 +17,11 @@
         margin: 0;
         overflow: hidden;
         height: 100%;
+        background-color: #D9D2A9;
+    }
+
+    canvas {
+        background-color: #D9D2A9;        
     }
 
     /* Scale canvas with resize attribute to full size */
@@ -29,7 +34,7 @@
     <button onclick="window.textTrace()">Text trace</button>
     
     <div>
-        <textarea id="newText" placeholder="Add text" rows="2"></textarea>
+        <textarea id="newText" placeholder="Add text" rows="2" >PIDDLESTICKS</textarea>
         <button onclick="window.app.addText()">Add</button>
     </div>
     
