Moved drag handling into a tool.

--- a/site/index.html
+++ b/site/index.html
@@ -17,11 +17,11 @@
         margin: 0;
         overflow: hidden;
         height: 100%;
-        background-color: #D9D2A9;
+        background-color: #F5F6CE;
     }
 
     canvas {
-        background-color: #D9D2A9;        
+                
     }
 
     /* Scale canvas with resize attribute to full size */
