--- a/site/index.html
+++ b/site/index.html
@@ -17,7 +17,7 @@
         margin: 0;
         overflow: hidden;
         height: 100%;
-        background-color: #F5F6CE;
+        background-color: #E9E0C3;
     }
 
     canvas {
@@ -31,10 +31,10 @@
     }
 </style>
 <body>
-    <button onclick="window.textTrace()">Text trace</button>
+    <!--<button onclick="window.textTrace()">Text trace</button>-->
     
     <div>
-        <textarea id="newText" placeholder="Add text" rows="2" >PIDDLESTICKS</textarea>
+        <textarea id="newText" placeholder="Add text" rows="2" >SKETCHWORD</textarea>
         <button onclick="window.app.addText()">Add</button>
     </div>
     
