Fixed block color selection. Added editor component.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-    <div id="textblock-editor"></div>    
+    <div id="designer"></div>    
     
 	<canvas id="mainCanvas" resize></canvas>
     
