--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <script type="text/javascript" src="dist/deps-bundle.js"></script>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" 
+        integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='lib/spectrum.css' />
     <link rel='stylesheet' href='css/app.css' />
     
@@ -17,7 +20,6 @@
 <body>
 
     <div id="designer"></div>
-    
     <div id="canvasContainer">
     	<canvas id="mainCanvas" resize></canvas>
         <div id="editorOverlay"></div>
