--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <script type="text/javascript" src="lib/paper-full.js"></script>
     <script type="text/javascript" src="lib/opentype.js"></script>
     <script type="text/javascript" src="lib/jquery.mousewheel.js"></script>
+    <script type="text/javascript" src="lib/bootstrap.min.js"></script>
 
     <script type="text/javascript" src="dist/deps-bundle.js"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
-    crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel='stylesheet' href='lib/spectrum.css' />
     <link rel='stylesheet' href='css/app.css' />
 
@@ -31,8 +31,6 @@
 
     <script type="text/javascript" src="dist/main.js"></script>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-    crossorigin="anonymous"></script>
 
 </body>
 
