React-select placeholder for font picker.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+    <title>Fiddlesticks | sketch with words</title>
+
     <script type="text/javascript" src="lib/jquery-2.2.0.min.js"></script>
 
     <script type="text/javascript" src="lib/spectrum.js"></script>
@@ -16,6 +18,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel='stylesheet' href='lib/spectrum.css' />
+    <link rel='stylesheet' href='css/react-select.css' />
+    
     <link rel='stylesheet' href='css/app.css' />
 
 </head>
@@ -23,7 +27,7 @@
 <body>
 
     <div id="designer"></div>
-
+    
     <div id="canvasContainer">
         <canvas id="mainCanvas" resize></canvas>
         <div id="editorOverlay"></div>
