fiddles are automatically saved to endpoint

--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,8 @@
 
     <title>Fiddlesticks | sketch with words</title>
 
+    <base href="/">
+
     <script type="text/javascript" src="lib/jquery-2.2.0.min.js"></script>
 
     <script type="text/javascript" src="lib/spectrum.js"></script>
