bug: Font editor changes the wrong block

--- a/site/index.html
+++ b/site/index.html
@@ -22,7 +22,12 @@
     <link rel='stylesheet' href='lib/spectrum.css' />
     <link rel='stylesheet' href='css/react-select.css' />
     
+    <!-- bootstrap-select -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>
+    
     <link rel='stylesheet' href='css/app.css' />
+
 
 </head>
 
