--- a/site/index.html
+++ b/site/index.html
@@ -7,8 +7,9 @@
 
     <base href="/">
 
-    <script type="text/javascript" src="lib/jquery-2.2.0.min.js"></script>
+    <link rel="icon" href="img/favicon.ico?v=3" type="image/x-icon" />
 
+    <script type="text/javascript" src="lib/jquery-2.2.0.min.js"></script>
     <script type="text/javascript" src="lib/spectrum.js"></script>
     <script type="text/javascript" src="lib/paper-full.js"></script>
     <script type="text/javascript" src="lib/opentype.js"></script>
