create help dialog

--- a/site/index.html
+++ b/site/index.html
@@ -39,6 +39,7 @@
     <div id="canvasContainer">
         <canvas id="mainCanvas" resize></canvas>
         <div id="editorOverlay"></div>
+        <div id="help-dialog"></div>
     </div>
 
     <script type="text/javascript" src="lib/main.js"></script>
