--- a/site/index.html
+++ b/site/index.html
@@ -15,6 +15,8 @@
     <script type="text/javascript" src="lib/opentype.js"></script>
     <script type="text/javascript" src="lib/jquery.mousewheel.js"></script>
     <script type="text/javascript" src="lib/bootstrap.min.js"></script>
+    <script type="text/javascript" src="lib/blob.js"></script>
+    <script type="text/javascript" src="lib/filesaver.min.js"></script>
 
     <script type="text/javascript" src="lib/client-deps.js"></script>
 
