region-fill experiment

--- a/site/index.html
+++ b/site/index.html
@@ -45,6 +45,12 @@
     </div>
 
     <script type="text/javascript" src="lib/main.js"></script>
+    
+    <script type="text/javascript">
+        const app = new App.AppModule();
+        window.app = app; 
+        app.start();
+    </script>
 
 </body>
 
