move paper module into shareable location

--- a/site/index.html
+++ b/site/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="lib/filesaver.min.js"></script>
 
     <script type="text/javascript" src="lib/client-deps.js"></script>
+    <script type="text/javascript" src="lib/font-shape.js"></script>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
