--- a/site/builder.html
+++ b/site/builder.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="lib/opentype.js"></script>
 
     <script type="text/javascript" src="lib/client-deps.js"></script>
+    <script type="text/javascript" src="lib/font-shape.js"></script>
 
     <link rel='stylesheet' href='css/builder.css' />
 
