Changed shape picker to simple elements, with canvas preview

--- a/site/builder.html
+++ b/site/builder.html
@@ -24,6 +24,10 @@
 
     <div id="builderContainer"></div>
 
+    <div id="previewCanvasContainer">
+        <canvas id="previewCanvas" resize></canvas>
+    </div>
+
     <div id="renderCanvasContainer">
         <canvas id="renderCanvas" resize></canvas>
     </div>
@@ -32,6 +36,7 @@
     <script type="text/javascript">
         const module = new SketchBuilder.Module(
             document.getElementById("builderContainer"),
+            document.getElementById("previewCanvas"),
             document.getElementById("renderCanvas"));
         module.start();
     </script>
