user can enter builder text

--- a/site/builder.html
+++ b/site/builder.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="lib/client-deps.js"></script>
     <script type="text/javascript" src="lib/font-shape.js"></script>
 
+    <link rel='stylesheet' href='css/app.css' />
     <link rel='stylesheet' href='css/builder.css' />
 
 </head>
@@ -29,7 +30,7 @@
     </div>
 
     <div id="renderCanvasContainer">
-        <canvas id="renderCanvas" resize></canvas>
+        <canvas id="renderCanvas"></canvas>
     </div>
 
     <script type="text/javascript" src="lib/main.js"></script>
