--- a/site/builder.html
+++ b/site/builder.html
@@ -23,14 +23,18 @@
 
 <body>
 
-    <div id="builderContainer"></div>
+    <div id="pageContainer">
+        
+        <div id="builderContainer"></div>
 
-    <div id="previewCanvasContainer">
-        <canvas id="previewCanvas" resize></canvas>
-    </div>
+        <div id="previewCanvasContainer">
+            <canvas id="previewCanvas" resize></canvas>
+        </div>
 
-    <div id="renderCanvasContainer">
-        <canvas id="renderCanvas"></canvas>
+        <div id="renderCanvasContainer">
+            <canvas id="renderCanvas"></canvas>
+        </div>
+
     </div>
 
     <script type="text/javascript" src="lib/main.js"></script>
