sketch: upload background image

--- a/site/index.html
+++ b/site/index.html
@@ -35,6 +35,7 @@
 <body>
 
     <div id="designer"></div>
+    <div id="operationPanel" class="hidden"></div>
 
     <div id="canvasContainer">
         <canvas id="mainCanvas" resize></canvas>
