--- a/site/index.html
+++ b/site/index.html
@@ -38,6 +38,7 @@
     <div id="operationPanel" class="hidden"></div>
 
     <div id="canvasContainer">
+        <img id="canvas-watermark" src="img/spiral-logo.svg" class="fill">
         <canvas id="mainCanvas" resize></canvas>
         <div id="editorOverlay"></div>
         <div id="help-dialog"></div>
