header with link to home in tools

--- a/site/builder.html
+++ b/site/builder.html
@@ -27,6 +27,10 @@
 
 <body>
 
+    <header class="navbar navbar-static-top bs-docs-nav">
+        <a href="/"><img src="img/spiral-logo.white.50.png" class="logo"></a>
+    </header>
+
     <div id="pageContainer">
         
         <div id="builderContainer"></div>
