--- a/site/index.html
+++ b/site/index.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-1">
-                    <a href="/"><img src="img/spiral-logo.white.png" class="logo"></a>
+                    <a href="/"><img src="img/spiral-logo.white.50.png" class="logo"></a>
                 </div>
                 <div class="col-md-1">
                     <h2>FIDDLESTICKS</h2>
