--- a/site/index.html
+++ b/site/index.html
@@ -55,7 +55,7 @@
                 <div class="row">                   
                     <div class="col-md-6">
                         <div class="product">
-                            <a href="/build">
+                            <a href="/build" title="Generate an attractive design for a quote that you enter. You can change the font, color and shape.">
                                 <img src="img/keep love corner.jpg">
                                 <div class="overlay bg">
                                 </div>
@@ -66,7 +66,7 @@
                     
                     <div class="col-md-6">
                         <div class="product">
-                            <a href="/sketch">
+                            <a href="/sketch" title="Sketch with blocks of text by warping and placing. You can change the font, color and size.">
                                 <img src="img/express corner.jpg">
                                 <div class="overlay bg">
                                 </div>
