Set up basic Google Analytics, or other activity tracking service

--- a/site/builder.html
+++ b/site/builder.html
@@ -22,7 +22,8 @@
 
     <link rel='stylesheet' href='css/app.css' />
     <link rel='stylesheet' href='css/builder.css' />
-
+    
+    <script type="text/javascript" src="lib/fstx-ga.js"></script>
 </head>
 
 <body>
