--- a/site/index.html
+++ b/site/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/index.css">
 
+    <script type="text/javascript" src="lib/fstx-ga.js"></script>
 </head>
 
 <body>
