--- a/site/sketch.html
+++ b/site/sketch.html
@@ -30,6 +30,7 @@
     
     <link rel='stylesheet' href='css/app.css' />
 
+    <script type="text/javascript" src="lib/fstx-ga.js"></script>
 </head>
 
 <body>
