Fixing builder formatting

--- a/site/builder.html
+++ b/site/builder.html
@@ -37,7 +37,7 @@
         <div id="builderContainer"></div>
 
         <div id="previewCanvasContainer">
-            <canvas id="previewCanvas"></canvas>
+            <canvas id="previewCanvas" resize></canvas>
             <div id="belowCanvasContainer">
                 <div id="belowCanvas"></div>
             </div>
