--- a/site/index.html
+++ b/site/index.html
@@ -36,27 +36,15 @@
 
     <div id="page">
 
-        <div class="container">
-            <div class="row hero-row">
-                <div class="col-md-4">
-                    <h1>We create interactive and generative typography apps.</h1>
-                    <h3>Try out an app below, or <a href="mailto:fiddlesticks@codeflight.io">drop us a line</a>.</h3>
-                </div>
-                <div class="col-md-8">
-                    <div class="hero-img-container">
-                        <img src="img/playing with text word pile.clipped.png" class="hero">
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <div class="products">
             <div class="container">
 
-                <div class="row">                   
+                <div class="row">
                     <div class="col-md-6">
                         <div class="product">
-                            <a href="/build" title="Generate an attractive design for a quote that you enter. You can change the font, color and shape.">
+                            <a href="/build"
+                                title="Generate an attractive design for a quote that you enter. You can change the font, color and shape.">
                                 <img src="img/keep love corner.jpg">
                                 <div class="overlay bg">
                                 </div>
@@ -64,10 +52,11 @@
                             </a>
                         </div>
                     </div>
-                    
+
                     <div class="col-md-6">
                         <div class="product">
-                            <a href="/sketch" title="Sketch with blocks of text by warping and placing. You can change the font, color and size.">
+                            <a href="/sketch"
+                                title="Sketch with blocks of text by warping and placing. You can change the font, color and size.">
                                 <img src="img/express corner.jpg">
                                 <div class="overlay bg">
                                 </div>
@@ -77,12 +66,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div class="container">
-            <footer class="row">
-                <span>© CodeFlight LLC</span>
-            </footer>
         </div>
 
     </div>
