Moving site files

--- a/app/public/wavy-words.html
+++ b/app/public/wavy-words.html
@@ -29,7 +29,7 @@
 
 </div>
 
-<script type="text/javascript" src="js/wavy-words.js"></script>
+<script type="text/javascript" src="../packages/wavy-words/src/browser.ts"></script>
 
 </body>
 
