--- a/packages/wavy-words/index.html
+++ b/packages/wavy-words/index.html
@@ -29,7 +29,7 @@
 
 </div>
 
-<script type="text/javascript" src="dist/esbuild/browser.js"></script>
+<script type="text/javascript" src="src/browser.ts"></script>
 
 </body>
 
