Ready to try Github hosting

--- a/app/public/wavy-words.html
+++ b/app/public/wavy-words.html
@@ -16,6 +16,10 @@
 
 <body>
 
+<header class="head">
+    <h2>Wavy Words</h2>
+</header>
+
 <div id="pageContainer">
 
     <div id="builderContainer"></div>
