--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0;url=wavy-words.html" />
     <title>Title</title>
 </head>
 <body>
