Update base URL

--- a/app/public/wavy-words.html
+++ b/app/public/wavy-words.html
@@ -2,10 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>Fiddlesticks | Builder</title>
+    <title>Wavy Words</title>
     <meta charset="UTF-8">
-
-    <base href="/">
 
     <link rel="icon" href="img/favicon.ico?v=3" type="image/x-icon"/>
 
