Editor working partially

--- a/packages/wavy-words/public/index.html
+++ b/packages/wavy-words/public/index.html
@@ -7,7 +7,7 @@
 
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
 
-    <link rel='stylesheet' href='builder.css'/>
+    <link rel='stylesheet' href='app.css'/>
 </head>
 
 <body>
