--- a/packages/type-sketcher/public/index.html
+++ b/packages/type-sketcher/public/index.html
@@ -5,16 +5,13 @@
 
     <title>Type Sketcher</title>
 
-    <!--    <base href="/">-->
-
     <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">-->
-
-    <link rel="stylesheet" href="font-awesome.css">
-    <!--    <link rel='stylesheet' href='lib/spectrum.css' />-->
     <link rel='stylesheet' href='app.css'/>
+
+    <!--    <link rel="stylesheet" href="bootstrap.min.css">-->
+    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">-->
+    <!--    <link rel="stylesheet" href="font-awesome.css">-->
+    <!--    <link rel='stylesheet' href='lib/spectrum.css' />-->
 
     <!--    <link rel="stylesheet"-->
     <!--          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css">-->
@@ -24,7 +21,7 @@
 
 <body>
 
-<div id="designer"></div>
+<div id="editorBar"></div>
 <div id="operationPanel" class="hidden"></div>
 
 <div id="canvasContainer">
