React color picker

--- a/packages/type-sketcher/public/index.html
+++ b/packages/type-sketcher/public/index.html
@@ -22,7 +22,7 @@
 <body>
 
 <div id="editorBar"></div>
-<div id="operationPanel" class="hidden"></div>
+<div id="operationPanel" style="display:none"></div>
 
 <div id="canvasContainer">
     <canvas id="mainCanvas" resize></canvas>
