--- a/packages/type-sketcher/public/index.html
+++ b/packages/type-sketcher/public/index.html
@@ -4,8 +4,8 @@
 <head>
     <title>Type Sketcher</title>
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-    <link rel='stylesheet' href='app.css'/>
+    <link href="favicon.ico" rel="icon" type="image/x-icon"/>
+    <link href='app.css' rel='stylesheet'/>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <div id="editorOverlay"></div>
 </div>
 
-<script type="text/javascript" src="../src/browser.ts"></script>
+<script src="../src/browser.ts" type="text/javascript"></script>
 
 </body>
 
