--- a/packages/wavy-words/public/index.html
+++ b/packages/wavy-words/public/index.html
@@ -5,9 +5,9 @@
     <title>Wavy Words</title>
     <meta charset="UTF-8">
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link href="favicon.ico" rel="icon" type="image/x-icon"/>
 
-    <link rel='stylesheet' href='app.css'/>
+    <link href='app.css' rel='stylesheet'/>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 
 </div>
 
-<script type="text/javascript" src="../src/browser.ts"></script>
+<script src="../src/browser.ts" type="text/javascript"></script>
 
 </body>
 
